test/testdata/functions/builtin/not_indexable_error.lox
clock[0]; // error: 'function' value is not indexable
